[project]
name = "finlabs-brokers"
version = "0.1.0"
description = "Pure Python broker SDK collection for FinLabs"
requires-python = ">=3.12"
dependencies = ["httpx>=0.27.0", "websockets>=13.0"]

[dependency-groups]
dev = ["pytest>=9.0.3", "ruff>=0.15.12"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
only-include = ["brokers"]
exclude = [
    "**/.claude",
    "**/.kiwoom.env",
    "**/.omx",
    "**/.pytest_cache",
    "**/.ruff_cache",
    "**/__pycache__",
    "**/AGENTS.md",
    "**/PLAN.md",
    "**/*.pyc",
    "**/pyproject.toml",
]
